syntax = "proto3";
option go_package = "github.com/rancher/opni-monitoring/pkg/core";
package core;

message BootstrapToken {
  string tokenID = 1;
  string secret = 2;
  BootstrapTokenMetadata metadata = 3;
}

message BootstrapTokenMetadata {
  int64 leaseID = 3;
  int64 ttl = 4;
  int64 usageCount = 5;
  map<string, string> labels = 6;
}

message BootstrapTokenList {
  repeated BootstrapToken items = 1;
}

message Cluster {
  string id = 1;
  map<string, string> labels = 2;
}

message ClusterList {
  repeated Cluster items = 1;
}

message LoggingCluster {
  string id = 1;
  string name = 2;
  string opensearchUserID = 3;
  map<string, string> labels = 4;
}

message LoggingClusterList {
  repeated LoggingCluster items = 1;
}

message LabelSelector { 
  map<string, string> matchLabels = 1; 
  repeated LabelSelectorRequirement matchExpressions = 2;
}

message LabelSelectorRequirement {
  string key = 1;
  string operator = 2;
  repeated string values = 3;
}

enum MatchOptions {
  Default = 0;
  EmptySelectorMatchesNone = 1;
}

message Role {
  string id = 1;
  repeated string clusterIDs = 2;
  LabelSelector matchLabels = 3;
}

message RoleBinding {
  string id = 1;
  string roleId = 2;
  repeated string subjects = 3;
  repeated string taints = 4;
}

message RoleList {
  repeated Role items = 1;
}

message RoleBindingList {
  repeated RoleBinding items = 1;
}

message CertInfo {
  string issuer = 1;
  string subject = 2;
  bool isCA = 3;
  string notBefore = 4;
  string notAfter = 5;
  string fingerprint = 6;
}

message Reference {
  string id = 1;
}

message ReferenceList {
  repeated Reference items = 1;
}

message SubjectAccessRequest {
  string subject = 1;
}

message OpensearchUser {
  string id = 1;
  string secret = 2;
}

message OpensearchNodePool {
  string name = 1;
  int32 replicas = 2;
  int32 diskSize = 3;
  int32 cpu = 4;
  int32 memory = 5;
  map<string, string> nodeSelector = 6;
  repeated string roles = 7;
}

message OpensearchCluster {
  string version = 1;
  repeated OpensearchNodePool nodepools = 2; 
}